# sentientecho

./: .dockerignore  .env  .env.example  API.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  Dockerfile  FINAL_SUBMISSION_REPORT.md  HANDOVER_TO_SENTIENT_TEAM.md  PROJECT_SUMMARY.md  README.md  TROUBLESHOOTING.md  USER_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test_agent_simple.py  test_ai.py  test_complete_agent.py  test_comprehensive_queries.py  test_direct_queries.py  test_enhanced_agent.py  test_processors.py  test_real_queries.py  test_reddit.py  test_twitter.py  test_working_queries.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  FINAL_PROJECT_ANALYSIS.md  INTEGRATION_GUIDE.md  SUBMISSION_CHECKLIST.md
src/: __init__.py  config.py  main.py  sentient_echo_agent.py  server.py
src/models/: __init__.py  post.py
src/processors/: __init__.py  post_processor.py  query_processor.py
src/providers/: __init__.py  ai_provider.py  jina_provider.py  reddit_provider.py  twitter_provider.py
src/utils/: __init__.py  cache.py  logger.py  security.py
tests/: __init__.py  test_config.py  test_integration.py
